# v-rep_sences

./: README.md
code/: body.lua
code/matlab_code/: gain_track.mlx  getgamma.m
sences/: BODY.ttt
signal_gait/: CMakeLists.txt  main.cpp
signal_gait/sences/: single_gain.ttt
signal_gait/src/: params.cpp  params.h  position_control.cpp  position_control.h
